2024-07-14 16:42 Created PDF download function

--- a/src/main/webapp/WEB-INF/views/document.html
+++ b/src/main/webapp/WEB-INF/views/document.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>document-html-webapp</title>
+<title>document-html</title>
 <style>
 	@font-face {
         font-family: "ChosunNm";
         src: url("resources/fonts/ChosunNm.ttf") format("truetype");
     }
+    
 	body {
 		margin: 0;
 		padding: 0;
