2024-07-31 10:14 Updated imgUploadHandler.js, folderUploadHandler.js

--- a/src/main/webapp/resources/css/cssCavity.css
+++ b/src/main/webapp/resources/css/cssCavity.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* 첨부 이미지 */
-#css-location {
+#css-cavity {
 	margin: 0;
 	padding: 0;
 	cursor: pointer;		
@@ -11,6 +11,6 @@
 	font-family: Arial, sans-serif;
 	position: relative;
 }
-#css-location:hover {
+#css-cavity:hover {
 	background: skyblue;
 }
