--- a/src/main/webapp/resources/css/cssLongSection.css
+++ b/src/main/webapp/resources/css/cssLongSection.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 /* 첨부 이미지 */
-#css-location {
+#css-long-section {
 	margin: 0;
 	padding: 0;
 	cursor: pointer;		
@@ -11,6 +11,6 @@
 	font-family: Arial, sans-serif;
 	position: relative;
 }
-#css-location:hover {
+#css-long-section:hover {
 	background: skyblue;
 }
